--- a/index.html
+++ b/index.html
@@ -3,13 +3,257 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Hi, I'm Akram Rahid. Specialized in Cinematography, VFX and Videography.">
+    <meta name="developer" content="Musharrof Shishir, musharrofshishir@gmail.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World!</title>
+    <title>Akram Rashid</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <!-- Preloader -->
+    <div class="preload">
+        <img src="assets/images/logo-wh.svg" class="img-fluid" id="emo" alt="">
+    </div>
+    <!-- Preloader Ends -->
+    <!-- Navbar -->
+    <header id="navBar" class="custom-navbar position-fixed">
+        <nav class=" navbar-light bg-light custom-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mx-auto">
+                        <div class="logo-wrap">
+                            <a class="navbar-brand logo" href="./index.html">
+                                <img src="assets/images/logo-wh.svg" alt="Logo">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- Navbar Ends -->
+    <!-- Mobile Navbar -->
+    <header id="mobileNav" class="custom-navbar position-fixed">
+        <nav class=" navbar-light bg-light custom-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mx-auto">
+                        <div class="logo-wrap">
+                            <a class="navbar-brand logo" href="./index.html">
+                                <img src="assets/images/logo-wh.svg" alt="Logo">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- Mobile Navbar Ends -->
+    <!-- Header -->
+    <section class="header-wrapper">
+        <div class="overlay"></div>
+        <div class="header-wrap">
+            <div class="container">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <div class="header-img-wrap">
+                        <img src="assets/images/header-img.png" id="main" alt="Image" class="header-img img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Header Ends -->
+    <!-- Video  -->
+    <section class="video-wrapper">
+        <div class="video-wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 col-lg-7 col-md-12 col-sm-12 mx-auto">
+                        <div class="video-tab-view-wrap">
+                            <div class="row">
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mx-auto">
+                                    <ul class="nav nav-pills mb-3 custom-nav-pills" id="pills-tab" role="tablist">
+                                        <li class="nav-item custom-nav-item " role="presentation">
+                                            <button class="nav-link _pills_link" id="_pills_work_tab" data-bs-toggle="pill" data-bs-target="#_pills_work" type="button" role="tab" aria-controls="pills-home" aria-selected="true">                                                 
+                                                Work
+                                            </button>
+                                        </li>
+                                        <li class="nav-item custom-nav-item" role="presentation">
+                                            <button class="nav-link _pills_link active" id="_pills_vlog_tab" data-bs-toggle="pill" data-bs-target="#_pills_vlog" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">                                                                                                                                                                                                   
+                                                Personal Vlogs
+                                            </button>
+                                        </li>
+                                        <li class="nav-item custom-nav-item" role="presentation">
+                                            <button class="nav-link _pills_link" id="_pills_vfx_tab" data-bs-toggle="pill" data-bs-target="#_pills_vfx" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">                                                                                                       
+                                                VFX
+                                            </button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xl-10 col-lg-11 col-md-12 col-sm-12 mx-auto">
+                                    <div class="tab-content video-tab-content" id="pills-tabContent">
+                                        <div class="tab-pane fade video-tab-pane" id="_pills_work" role="tabpanel" aria-labelledby="_pills_work_tab">
+                                            <div class="row">
+                                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/FAACsINTORE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/Fgk_QK1SB-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/w7ZO2Jg1i9w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/KEkOD6YjS7A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/Zflcu0_PPfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade video-tab-pane active show" id="_pills_vlog" role="tabpanel" aria-labelledby="_pills_vlog_tab">
+                                            <div class="row">
+                                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/r6ykkS1zTkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/HT9uKSck3EQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/0JjkeKoPUkE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade video-tab-pane" id="_pills_vfx" role="tabpanel" aria-labelledby="_pills_vfx_tab">
+                                            <div class="row">
+                                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/vkUEMDm_4DU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/X_Bhx48EbtI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                    <div class="video-content">
+                                                        <iframe src="https://www.youtube-nocookie.com/embed/rBHHhZffPbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Video Ends  -->
+    <!-- Social  -->
+    <section class="social-wrapper">
+        <div class="social-wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12 mx-auto">
+                        <div class="section-header">
+                            <h2>socials</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-10 mx-auto">
+                            <div class="social-link-wrap">
+                                <ul>
+                                    <li>
+                                        <a target="_blank" href="https://www.instagram.com/akram_rashid1/">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512">
+                                                <path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a target="_blank" href="https://www.facebook.com/AkramRashidOfficial">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" class="svg-inline--fa fa-facebook fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512">
+                                                <path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a target="_blank" href="https://www.linkedin.com/in/akramrashid/">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512">
+                                                <path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a target="_blank" href="https://www.youtube.com/c/AkramRashid/featured">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="youtube" class="svg-inline--fa fa-youtube fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                                                <path fill="currentColor" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Social Ends  -->
+    <!-- Footer -->
+    <footer class="footer-wrapper">
+        <div class="footer-wrap">
+            <div class="container">
+                <hr class="divider">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <div class="footer-contact-item">
+                            <p class="mail">
+                                <a href="mailto:akram.rashid007@gmail.com">akram.rashid007@gmail.com</a></p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <div class="footer-contact-item">
+                            <p class="copyright"><a> &copy; Akram Rashid </a></p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <div class="footer-contact-item">
+                            <p class="mobile">
+                                <a href="#0">
+                                    +8801628076991                                   
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Ends -->
+    <!-- Bootstrap -->
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <!-- GSAP -->
+    <script src="assets/js/gsap.min.js"></script>
+    <!-- Custom JS -->
+    <script src="assets/js/app.js"></script>
+
 </body>
 
 </html>
